--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Build command
         run: npm run build
       - name: Deploy to surge
-        run: surge ./dist saad-saif-angular-todo.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./dist/todoApp saad-saif-angular-todo.surge.sh --token ${{ secrets.SURGE_TOKEN }}
